--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,15 +3,19 @@ server:
 spring:
   application:
     name: "msvc-items"
-  cloud:
-    discovery:
-      client:
-        simple:
-          instances:
-            msvc-products:
-              - uri: http://localhost:8004
-              - uri: http://localhost:8005
+#  cloud:
+#    discovery:
+#      client:
+#        simple:
+#          instances:
+#            msvc-products:
+#              - uri: http://localhost:8004
+#              - uri: http://localhost:8005
 config:
   baseurl:
     endpoint:
       msvc-products: http://msvc-products
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
